[gd_scene load_steps=11 format=3 uid="uid://b2d38xd3spm00"]

[ext_resource type="Script" path="res://Script/Lane.gd" id="1_k8sbp"]
[ext_resource type="PackedScene" uid="uid://bwfk5wifwh7gh" path="res://Prefabs/draw_circle.tscn" id="2_2l6kj"]
[ext_resource type="PackedScene" uid="uid://dh5na76ijnv21" path="res://Prefabs/auto_release.tscn" id="2_uwfjn"]
[ext_resource type="Theme" uid="uid://d17rvefvnjqvd" path="res://Theme/BasicTheme.tres" id="2_vbyn4"]
[ext_resource type="PackedScene" uid="uid://s3ul4ha0vxbf" path="res://Prefabs/draw_meteor_icon.tscn" id="3_n4n68"]
[ext_resource type="Script" path="res://Script/PrecisionLabel.gd" id="4_77chn"]
[ext_resource type="AudioStream" uid="uid://bi3h62cnwpsr7" path="res://Son/SFX/Down.wav" id="7_lnlj7"]
[ext_resource type="Script" path="res://Prefabs/But_mesure.gd" id="7_n5hng"]
[ext_resource type="AudioStream" uid="uid://bdewx3084u5od" path="res://Son/SFX/Up.wav" id="8_lc88e"]
[ext_resource type="AudioStream" uid="uid://d3odhtis8xumg" path="res://Son/SFX/Mesure.wav" id="10_srcd1"]

[node name="LanePanel" type="Panel"]
anchors_preset = -1
anchor_right = 0.183
anchor_bottom = 0.535
offset_right = 0.319992
offset_bottom = 0.0999756
size_flags_horizontal = 3

[node name="Lane" type="Control" parent="."]
z_index = 3
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 0.789
offset_left = 89.0
offset_top = 19.0
offset_right = -87.0
offset_bottom = -33.021
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k8sbp")

[node name="SkyPoint" type="Control" parent="Lane"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -176.0
grow_horizontal = 2
grow_vertical = 2

[node name="ImpactPoint" type="Control" parent="Lane"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 176.0
grow_horizontal = 2
grow_vertical = 2

[node name="DrawCircle" parent="Lane/ImpactPoint" instance=ExtResource("2_2l6kj")]
z_as_relative = false
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
col = Color(1, 0.180392, 0.235294, 0.47451)

[node name="Meteor" type="Control" parent="Lane"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -176.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_group_ = true

[node name="TextureRect" parent="Lane/Meteor" instance=ExtResource("3_n4n68")]
col = Color(0.545098, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.063
anchor_top = 0.046
anchor_right = 0.943
anchor_bottom = 0.97
offset_left = -0.105
offset_top = 0.113998
offset_right = 0.0950012
offset_bottom = 0.22998
grow_horizontal = 2
grow_vertical = 2
alignment = 2

[node name="PrecisionLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "PRECISION: [100%]"
autowrap_mode = 2
script = ExtResource("4_77chn")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="DecreasePrecision" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_vbyn4")
text = "-"

[node name="auto_release" parent="VBoxContainer/HBoxContainer/DecreasePrecision" instance=ExtResource("2_uwfjn")]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="VBoxContainer/HBoxContainer/DecreasePrecision"]
stream = ExtResource("7_lnlj7")
volume_db = -5.0

[node name="IncreasePrecision" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_vbyn4")
text = "+"

[node name="auto_release" parent="VBoxContainer/HBoxContainer/IncreasePrecision" instance=ExtResource("2_uwfjn")]

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="VBoxContainer/HBoxContainer/IncreasePrecision"]
stream = ExtResource("8_lc88e")
volume_db = -5.0

[node name="But_mesure" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme = ExtResource("2_vbyn4")
text = "Mesure"
script = ExtResource("7_n5hng")

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="VBoxContainer/But_mesure"]
stream = ExtResource("10_srcd1")
volume_db = -5.0

[node name="auto_release" parent="VBoxContainer/But_mesure" instance=ExtResource("2_uwfjn")]

[connection signal="pressed" from="VBoxContainer/HBoxContainer/DecreasePrecision" to="Lane" method="press_decrease_precision"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/DecreasePrecision" to="VBoxContainer/HBoxContainer/DecreasePrecision/AudioStreamPlayer" method="play"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/IncreasePrecision" to="Lane" method="press_increase_precision"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/IncreasePrecision" to="VBoxContainer/HBoxContainer/IncreasePrecision/AudioStreamPlayer2" method="play"]
[connection signal="pressed" from="VBoxContainer/But_mesure" to="Lane" method="press_mesure"]
[connection signal="pressed" from="VBoxContainer/But_mesure" to="VBoxContainer/But_mesure/AudioStreamPlayer3" method="play"]
